<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
     
    <TextView
        android:id="@+id/text_view_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_altitude" />

    <TextView
        android:id="@+id/text_view_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_state" />

    <TextView
        android:id="@+id/text_view_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_battery" />

	<RelativeLayout
        android:id="@+id/shape_control_panel"
        android:layout_width="120dp"
        android:layout_height="fill_parent"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="10dp"
		android:layout_marginBottom="20dp"
        android:layout_below="@id/text_view_altitude" >
       	
	    <Button 
	        android:id="@+id/polygon_button_delete_last"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/polygon_delete_last"/>
	    
	    <Button 
	        android:id="@+id/polygon_button_delete_all"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:text="@string/polygon_delete_all"/>
	    
	    <Button 
	        android:id="@+id/polygon_button_start"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:text="@string/polygon_fly_start"/>
    
    </RelativeLayout>
    
    
	<de.dhbw.androne.view.polygon.PolygonView
        android:id="@+id/polygon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_altitude"
        android:layout_margin="10dp"
        android:layout_toRightOf="@id/shape_control_panel" />
	
    <!-- 
     <de.dhbw.androne.view.polygon.PolygonView 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
 -->
</RelativeLayout>