<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView 
        android:id="@+id/text_view_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
    	android:text="@string/text_view_altitude"/>

    <TextView 
        android:id="@+id/text_view_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
    	android:text="@string/text_view_state"/>
    
    <TextView 
        android:id="@+id/text_view_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_battery"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp" >

        <ImageButton
            android:id="@+id/direct_button_rotate_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_direct_rotate_left" />
        
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        <ImageButton
	            android:id="@+id/direct_button_up"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/button_direct_up" />
	        <ImageButton
	            android:id="@+id/direct_button_down"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/button_direct_down" />
    	
    	</LinearLayout>

        <ImageButton
            android:id="@+id/direct_button_rotate_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_direct_rotate_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp" >

        <ImageButton
            android:id="@+id/direct_button_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_direct_left" />
        
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">
	        <ImageButton
	            android:id="@+id/direct_button_forward"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/button_direct_forward" />
	        <ImageButton
	            android:id="@+id/direct_button_backward"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/button_direct_backward" />
    	
    	</LinearLayout>

        <ImageButton
            android:id="@+id/direct_button_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_direct_right" />

    </LinearLayout>

</RelativeLayout>